--- a/Data_EXP.ipynb
+++ b/Data_EXP.ipynb
@@ -2,40 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pandas\n",
-      "  Using cached pandas-2.2.2-cp310-cp310-win_amd64.whl.metadata (19 kB)\n",
-      "Collecting numpy>=1.22.4 (from pandas)\n",
-      "  Using cached numpy-2.0.0-cp310-cp310-win_amd64.whl.metadata (60 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\ajay2\\onedrive\\desktop\\guvi\\project_cap\\final_proj\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Using cached pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Using cached tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\ajay2\\onedrive\\desktop\\guvi\\project_cap\\final_proj\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Using cached pandas-2.2.2-cp310-cp310-win_amd64.whl (11.6 MB)\n",
-      "Using cached numpy-2.0.0-cp310-cp310-win_amd64.whl (16.5 MB)\n",
-      "Using cached pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
-      "Using cached tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
-      "Installing collected packages: pytz, tzdata, numpy, pandas\n",
-      "Successfully installed numpy-2.0.0 pandas-2.2.2 pytz-2024.1 tzdata-2024.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pandas\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -260,19 +227,19 @@
        "[200000 rows x 9 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=pd.read_csv(\"uber.csv\")\n",
+    "df=pd.read_csv(\"Data/uber.csv\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +271,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Unnamed: 0                            key  fare_amount  \\\n",
+      "0         24238194    2015-05-07 19:52:06.0000003          7.5   \n",
+      "1         27835199    2009-07-17 20:04:56.0000002          7.7   \n",
+      "2         44984355   2009-08-24 21:45:00.00000061         12.9   \n",
+      "3         25894730    2009-06-26 08:22:21.0000001          5.3   \n",
+      "4         17610152  2014-08-28 17:47:00.000000188         16.0   \n",
+      "...            ...                            ...          ...   \n",
+      "199995    42598914   2012-10-28 10:49:00.00000053          3.0   \n",
+      "199996    16382965    2014-03-14 01:09:00.0000008          7.5   \n",
+      "199997    27804658   2009-06-29 00:42:00.00000078         30.9   \n",
+      "199998    20259894    2015-05-20 14:56:25.0000004         14.5   \n",
+      "199999    11951496   2010-05-15 04:08:00.00000076         14.1   \n",
+      "\n",
+      "                 pickup_datetime  pickup_longitude  pickup_latitude  \\\n",
+      "0      2015-05-07 19:52:06+00:00        -73.999817        40.738354   \n",
+      "1      2009-07-17 20:04:56+00:00        -73.994355        40.728225   \n",
+      "2      2009-08-24 21:45:00+00:00        -74.005043        40.740770   \n",
+      "3      2009-06-26 08:22:21+00:00        -73.976124        40.790844   \n",
+      "4      2014-08-28 17:47:00+00:00        -73.925023        40.744085   \n",
+      "...                          ...               ...              ...   \n",
+      "199995 2012-10-28 10:49:00+00:00        -73.987042        40.739367   \n",
+      "199996 2014-03-14 01:09:00+00:00        -73.984722        40.736837   \n",
+      "199997 2009-06-29 00:42:00+00:00        -73.986017        40.756487   \n",
+      "199998 2015-05-20 14:56:25+00:00        -73.997124        40.725452   \n",
+      "199999 2010-05-15 04:08:00+00:00        -73.984395        40.720077   \n",
+      "\n",
+      "        dropoff_longitude  dropoff_latitude  passenger_count  year  month  \\\n",
+      "0              -73.999512         40.723217                1  2015      5   \n",
+      "1              -73.994710         40.750325                1  2009      7   \n",
+      "2              -73.962565         40.772647                1  2009      8   \n",
+      "3              -73.965316         40.803349                3  2009      6   \n",
+      "4              -73.973082         40.761247                5  2014      8   \n",
+      "...                   ...               ...              ...   ...    ...   \n",
+      "199995         -73.986525         40.740297                1  2012     10   \n",
+      "199996         -74.006672         40.739620                1  2014      3   \n",
+      "199997         -73.858957         40.692588                2  2009      6   \n",
+      "199998         -73.983215         40.695415                1  2015      5   \n",
+      "199999         -73.985508         40.768793                1  2010      5   \n",
+      "\n",
+      "            time  \n",
+      "0       19:52:06  \n",
+      "1       20:04:56  \n",
+      "2       21:45:00  \n",
+      "3       08:22:21  \n",
+      "4       17:47:00  \n",
+      "...          ...  \n",
+      "199995  10:49:00  \n",
+      "199996  01:09:00  \n",
+      "199997  00:42:00  \n",
+      "199998  14:56:25  \n",
+      "199999  04:08:00  \n",
+      "\n",
+      "[200000 rows x 12 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['pickup_datetime'] = pd.to_datetime(df['pickup_datetime'])\n",
+    "\n",
+    "# Create separate columns for year, month, and time\n",
+    "df['year'] = df['pickup_datetime'].dt.year\n",
+    "df['month'] = df['pickup_datetime'].dt.month\n",
+    "df['time'] = df['pickup_datetime'].dt.time\n",
+    "\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -368,92 +411,6 @@
     }
    ],
    "source": [
-    "df['pickup_datetime'] = pd.to_datetime(df['pickup_datetime'])\n",
-    "\n",
-    "# Create separate columns for year, month, and time\n",
-    "df['year'] = df['pickup_datetime'].dt.year\n",
-    "df['month'] = df['pickup_datetime'].dt.month\n",
-    "df['time'] = df['pickup_datetime'].dt.time\n",
-    "\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1\n",
-    "df2=df1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Unnamed: 0                           key  fare_amount  \\\n",
-      "0         24238194 2015-05-07 19:52:06.000000300          7.5   \n",
-      "1         27835199 2009-07-17 20:04:56.000000200          7.7   \n",
-      "2         44984355 2009-08-24 21:45:00.000000610         12.9   \n",
-      "3         25894730 2009-06-26 08:22:21.000000100          5.3   \n",
-      "4         17610152 2014-08-28 17:47:00.000000188         16.0   \n",
-      "...            ...                           ...          ...   \n",
-      "199995    42598914 2012-10-28 10:49:00.000000530          3.0   \n",
-      "199996    16382965 2014-03-14 01:09:00.000000800          7.5   \n",
-      "199997    27804658 2009-06-29 00:42:00.000000780         30.9   \n",
-      "199998    20259894 2015-05-20 14:56:25.000000400         14.5   \n",
-      "199999    11951496 2010-05-15 04:08:00.000000760         14.1   \n",
-      "\n",
-      "                pickup_datetime  pickup_longitude  pickup_latitude  \\\n",
-      "0       2015-05-07 19:52:06 UTC        -73.999817        40.738354   \n",
-      "1       2009-07-17 20:04:56 UTC        -73.994355        40.728225   \n",
-      "2       2009-08-24 21:45:00 UTC        -74.005043        40.740770   \n",
-      "3       2009-06-26 08:22:21 UTC        -73.976124        40.790844   \n",
-      "4       2014-08-28 17:47:00 UTC        -73.925023        40.744085   \n",
-      "...                         ...               ...              ...   \n",
-      "199995  2012-10-28 10:49:00 UTC        -73.987042        40.739367   \n",
-      "199996  2014-03-14 01:09:00 UTC        -73.984722        40.736837   \n",
-      "199997  2009-06-29 00:42:00 UTC        -73.986017        40.756487   \n",
-      "199998  2015-05-20 14:56:25 UTC        -73.997124        40.725452   \n",
-      "199999  2010-05-15 04:08:00 UTC        -73.984395        40.720077   \n",
-      "\n",
-      "        dropoff_longitude  dropoff_latitude  passenger_count  year  month  \\\n",
-      "0              -73.999512         40.723217                1  2015      5   \n",
-      "1              -73.994710         40.750325                1  2009      7   \n",
-      "2              -73.962565         40.772647                1  2009      8   \n",
-      "3              -73.965316         40.803349                3  2009      6   \n",
-      "4              -73.973082         40.761247                5  2014      8   \n",
-      "...                   ...               ...              ...   ...    ...   \n",
-      "199995         -73.986525         40.740297                1  2012     10   \n",
-      "199996         -74.006672         40.739620                1  2014      3   \n",
-      "199997         -73.858957         40.692588                2  2009      6   \n",
-      "199998         -73.983215         40.695415                1  2015      5   \n",
-      "199999         -73.985508         40.768793                1  2010      5   \n",
-      "\n",
-      "            time  \n",
-      "0       19:52:06  \n",
-      "1       20:04:56  \n",
-      "2       21:45:00  \n",
-      "3       08:22:21  \n",
-      "4       17:47:00  \n",
-      "...          ...  \n",
-      "199995  10:49:00  \n",
-      "199996  01:09:00  \n",
-      "199997  00:42:00  \n",
-      "199998  14:56:25  \n",
-      "199999  04:08:00  \n",
-      "\n",
-      "[200000 rows x 12 columns]\n"
-     ]
-    }
-   ],
-   "source": [
     "\n",
     "df['key'] = pd.to_datetime(df['key'])\n",
     "\n",
@@ -466,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +433,7 @@
        "       40.72121   , 40.72545242])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,19 +444,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'count'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpickup_longitude\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munique\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcount\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'count'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([-73.99981689, -73.994355  , -74.005043  , ..., -73.969204  ,\n",
+       "       -74.003548  , -73.99712372])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
