--- a/Data_EXP.ipynb
+++ b/Data_EXP.ipynb
@@ -465,6 +465,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([40.72321701, 40.750325  , 40.772647  , ..., 40.692588  ,\n",
+       "       40.6954155 , 40.768793  ])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['dropoff_latitude'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-73.99951172, -73.99471   , -73.962565  , ..., -73.95223999,\n",
+       "       -74.01390839, -73.858957  ])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['dropoff_longitude'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
