--- a/Data_EXP.ipynb
+++ b/Data_EXP.ipynb
@@ -507,6 +507,289 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>key</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>pickup_datetime</th>\n",
+       "      <th>pickup_longitude</th>\n",
+       "      <th>pickup_latitude</th>\n",
+       "      <th>dropoff_longitude</th>\n",
+       "      <th>dropoff_latitude</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24238194</td>\n",
+       "      <td>2015-05-07 19:52:06.000000300</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>2015-05-07 19:52:06+00:00</td>\n",
+       "      <td>-73.999817</td>\n",
+       "      <td>40.738354</td>\n",
+       "      <td>-73.999512</td>\n",
+       "      <td>40.723217</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19:52:06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27835199</td>\n",
+       "      <td>2009-07-17 20:04:56.000000200</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>2009-07-17 20:04:56+00:00</td>\n",
+       "      <td>-73.994355</td>\n",
+       "      <td>40.728225</td>\n",
+       "      <td>-73.994710</td>\n",
+       "      <td>40.750325</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20:04:56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>44984355</td>\n",
+       "      <td>2009-08-24 21:45:00.000000610</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>2009-08-24 21:45:00+00:00</td>\n",
+       "      <td>-74.005043</td>\n",
+       "      <td>40.740770</td>\n",
+       "      <td>-73.962565</td>\n",
+       "      <td>40.772647</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>25894730</td>\n",
+       "      <td>2009-06-26 08:22:21.000000100</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2009-06-26 08:22:21+00:00</td>\n",
+       "      <td>-73.976124</td>\n",
+       "      <td>40.790844</td>\n",
+       "      <td>-73.965316</td>\n",
+       "      <td>40.803349</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:22:21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17610152</td>\n",
+       "      <td>2014-08-28 17:47:00.000000188</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2014-08-28 17:47:00+00:00</td>\n",
+       "      <td>-73.925023</td>\n",
+       "      <td>40.744085</td>\n",
+       "      <td>-73.973082</td>\n",
+       "      <td>40.761247</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17:47:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199995</th>\n",
+       "      <td>42598914</td>\n",
+       "      <td>2012-10-28 10:49:00.000000530</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2012-10-28 10:49:00+00:00</td>\n",
+       "      <td>-73.987042</td>\n",
+       "      <td>40.739367</td>\n",
+       "      <td>-73.986525</td>\n",
+       "      <td>40.740297</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10:49:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199996</th>\n",
+       "      <td>16382965</td>\n",
+       "      <td>2014-03-14 01:09:00.000000800</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>2014-03-14 01:09:00+00:00</td>\n",
+       "      <td>-73.984722</td>\n",
+       "      <td>40.736837</td>\n",
+       "      <td>-74.006672</td>\n",
+       "      <td>40.739620</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>3</td>\n",
+       "      <td>01:09:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199997</th>\n",
+       "      <td>27804658</td>\n",
+       "      <td>2009-06-29 00:42:00.000000780</td>\n",
+       "      <td>30.9</td>\n",
+       "      <td>2009-06-29 00:42:00+00:00</td>\n",
+       "      <td>-73.986017</td>\n",
+       "      <td>40.756487</td>\n",
+       "      <td>-73.858957</td>\n",
+       "      <td>40.692588</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>6</td>\n",
+       "      <td>00:42:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199998</th>\n",
+       "      <td>20259894</td>\n",
+       "      <td>2015-05-20 14:56:25.000000400</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>2015-05-20 14:56:25+00:00</td>\n",
+       "      <td>-73.997124</td>\n",
+       "      <td>40.725452</td>\n",
+       "      <td>-73.983215</td>\n",
+       "      <td>40.695415</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14:56:25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199999</th>\n",
+       "      <td>11951496</td>\n",
+       "      <td>2010-05-15 04:08:00.000000760</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>2010-05-15 04:08:00+00:00</td>\n",
+       "      <td>-73.984395</td>\n",
+       "      <td>40.720077</td>\n",
+       "      <td>-73.985508</td>\n",
+       "      <td>40.768793</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>5</td>\n",
+       "      <td>04:08:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200000 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0                           key  fare_amount  \\\n",
+       "0         24238194 2015-05-07 19:52:06.000000300          7.5   \n",
+       "1         27835199 2009-07-17 20:04:56.000000200          7.7   \n",
+       "2         44984355 2009-08-24 21:45:00.000000610         12.9   \n",
+       "3         25894730 2009-06-26 08:22:21.000000100          5.3   \n",
+       "4         17610152 2014-08-28 17:47:00.000000188         16.0   \n",
+       "...            ...                           ...          ...   \n",
+       "199995    42598914 2012-10-28 10:49:00.000000530          3.0   \n",
+       "199996    16382965 2014-03-14 01:09:00.000000800          7.5   \n",
+       "199997    27804658 2009-06-29 00:42:00.000000780         30.9   \n",
+       "199998    20259894 2015-05-20 14:56:25.000000400         14.5   \n",
+       "199999    11951496 2010-05-15 04:08:00.000000760         14.1   \n",
+       "\n",
+       "                 pickup_datetime  pickup_longitude  pickup_latitude  \\\n",
+       "0      2015-05-07 19:52:06+00:00        -73.999817        40.738354   \n",
+       "1      2009-07-17 20:04:56+00:00        -73.994355        40.728225   \n",
+       "2      2009-08-24 21:45:00+00:00        -74.005043        40.740770   \n",
+       "3      2009-06-26 08:22:21+00:00        -73.976124        40.790844   \n",
+       "4      2014-08-28 17:47:00+00:00        -73.925023        40.744085   \n",
+       "...                          ...               ...              ...   \n",
+       "199995 2012-10-28 10:49:00+00:00        -73.987042        40.739367   \n",
+       "199996 2014-03-14 01:09:00+00:00        -73.984722        40.736837   \n",
+       "199997 2009-06-29 00:42:00+00:00        -73.986017        40.756487   \n",
+       "199998 2015-05-20 14:56:25+00:00        -73.997124        40.725452   \n",
+       "199999 2010-05-15 04:08:00+00:00        -73.984395        40.720077   \n",
+       "\n",
+       "        dropoff_longitude  dropoff_latitude  passenger_count  year  month  \\\n",
+       "0              -73.999512         40.723217                1  2015      5   \n",
+       "1              -73.994710         40.750325                1  2009      7   \n",
+       "2              -73.962565         40.772647                1  2009      8   \n",
+       "3              -73.965316         40.803349                3  2009      6   \n",
+       "4              -73.973082         40.761247                5  2014      8   \n",
+       "...                   ...               ...              ...   ...    ...   \n",
+       "199995         -73.986525         40.740297                1  2012     10   \n",
+       "199996         -74.006672         40.739620                1  2014      3   \n",
+       "199997         -73.858957         40.692588                2  2009      6   \n",
+       "199998         -73.983215         40.695415                1  2015      5   \n",
+       "199999         -73.985508         40.768793                1  2010      5   \n",
+       "\n",
+       "            time  \n",
+       "0       19:52:06  \n",
+       "1       20:04:56  \n",
+       "2       21:45:00  \n",
+       "3       08:22:21  \n",
+       "4       17:47:00  \n",
+       "...          ...  \n",
+       "199995  10:49:00  \n",
+       "199996  01:09:00  \n",
+       "199997  00:42:00  \n",
+       "199998  14:56:25  \n",
+       "199999  04:08:00  \n",
+       "\n",
+       "[200000 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## branching"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
